Bug 1004516 - Ensure state is properly cleared in the ActiveElementManager. r=botond